Auto add proguard config (#3494)
## Description

<!--
Description and motivation for this PR.

Inlude Fixes #<number> if this is fixing some issue.

Fixes # .
-->

This will automatically configure proguard rules. Preventing crahes for
people who miss out on adding these steps, or use expo with proguard.

## Changes

<!--
Please describe things you've changed here, make a **high level**
overview, if change is simple you can omit this section.

For example:

- Added `foo` method which add bouncing animation
- Updated `about.md` docs
- Added caching in CI builds

-->

Added proguard rules config, and enabled consumerProguardFiles in
build.gradle.

## Test code and steps to reproduce

All tests pass.

## Checklist

- [ ] Included code example that can be used to test this change
- [ ] Updated TS types
- [ ] Added TS types tests
- [ ] Added unit / integration tests
- [x] Updated documentation
- [x] Ensured that CI passes

---------

Co-authored-by: Krzysztof Piaskowy <krzychu2956@gmail.com>

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -463,6 +463,8 @@ android {
         buildConfigField("boolean", "IS_INTERNAL_BUILD", "false")
         buildConfigField("int", "EXOPACKAGE_FLAGS", "0")
         buildConfigField("int", "REACT_NATIVE_MINOR_VERSION", REACT_NATIVE_MINOR_VERSION.toString())
+        
+        consumerProguardFiles 'proguard-rules.pro'
     }
     externalNativeBuild {
         cmake {
