Cache Android build artifacts in GitHub Actions (#3456)
## Description

Follow-up to #3448.

Before:

<img width="797" alt="before1"
src="https://user-images.githubusercontent.com/20516055/220180481-160fcf4a-a3a5-4a3e-88a7-01ebb0c35e66.png">

<img width="798" alt="before2"
src="https://user-images.githubusercontent.com/20516055/220180489-52942d24-3581-43a8-b5dd-35d0756471f4.png">

After:

<img width="852" alt="after"
src="https://user-images.githubusercontent.com/20516055/220180391-0dc62c38-896c-47cc-8e93-0f1022ffaa97.png">

<!--
Description and motivation for this PR.

Inlude Fixes #<number> if this is fixing some issue.

Fixes # .
-->

## Changes

<!--
Please describe things you've changed here, make a **high level**
overview, if change is simple you can omit this section.

For example:

- Added `foo` method which add bouncing animation
- Updated `about.md` docs
- Added caching in CI builds

-->

<!--

## Screenshots / GIFs

Here you can add screenshots / GIFs documenting your change.

You can add before / after section if you're changing some behavior.

### Before

### After

-->

## Test code and steps to reproduce

<!--
Please include code that can be used to test this change and short
description how this example should work.
This snippet should be as minimal as possible and ready to be pasted
into editor (don't exclude exports or remove "not important" parts of
reproduction example)
-->

## Checklist

- [ ] Included code example that can be used to test this change
- [ ] Updated TS types
- [ ] Added TS types tests
- [ ] Added unit / integration tests
- [ ] Updated documentation
- [ ] Ensured that CI passes

---------

Co-authored-by: kacperkapusciak <kacper.kapusciak@swmansion.com>

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -2,10 +2,13 @@ name: Test Android build
 on:
   pull_request:
     paths:
-      - 'android/**'
-      - 'Common/**'
-      - 'FabricExample/package.json'
-      - 'Example/package.json'
+      - .github/workflows/android-build.yml
+      - android/**
+      - Common/**
+      - Example/package.json
+      - Example/android/**
+      - FabricExample/package.json
+      - FabricExample/android/**
   push:
     branches:
       - main
@@ -16,49 +19,41 @@ jobs:
     strategy:
       matrix:
         working-directory: [Example, FabricExample]
+      fail-fast: false
     concurrency:
       group: android-${{ matrix.working-directory }}-${{ github.ref }}
       cancel-in-progress: true
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+
+      - name: Setup Java 11
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
-      - name: Install NDK
-        uses: nttld/setup-ndk@v1
-        id: setup-ndk
+          distribution: 'zulu'
+          java-version: 11
+
+      - name: Restore Reanimated node_modules from cache
+        uses: actions/cache@v3
         with:
-          ndk-version: r21d
-      - name: Set ANDROID_NDK
-        run: echo "ANDROID_NDK=$ANDROID_HOME/ndk-bundle" >> $GITHUB_ENV
-      - name: Accept licenses
-        run: /bin/bash -c "yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null"
-      - name: Use Node.js 14
-        uses: actions/setup-node@v2
+          path: node_modules
+          key: ${{ runner.os }}-android-node-modules-reanimated-${{ hashFiles('yarn.lock') }}
+          restore-keys: ${{ runner.os }}-android-node-modules-reanimated-
+
+      - name: Install Reanimated node_modules
+        run: yarn install --frozen-lockfile
+
+      - name: Restore app node_modules from cache
+        uses: actions/cache@v3
         with:
-          node-version: 14
-          cache: 'yarn'
-      - name: Install root node dependencies
-        run: yarn
-      - name: Install example app node dependencies
+          path: ${{ matrix.working-directory }}/node_modules
+          key: ${{ runner.os }}-android-node-modules-${{ matrix.working-directory }}-${{ hashFiles(format('{0}/yarn.lock', matrix.working-directory)) }}
+          restore-keys: ${{ runner.os }}-android-node-modules-${{ matrix.working-directory }}-
+
+      - name: Install app node_modules
         working-directory: ${{ matrix.working-directory }}
-        run: yarn
-      - name: Cache hermes build
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-rn-hermes-engine
-        with:
-          path: ${{ matrix.working-directory }}/node_modules/react-native
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.working-directory }}-${{ hashFiles('**/react-native/package.json') }}
-      - name: Cache android libraries
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-rn
-        with:
-          path: ${{ matrix.working-directory }}/android/app/build/react-ndk
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.working-directory }}-${{ hashFiles('**/react-native/package.json') }}
+        run: yarn install --frozen-lockfile
+
       - name: Build app
         working-directory: ${{ matrix.working-directory }}/android
-        run: ./gradlew assembleDebug --console=plain -PreactNativeArchitectures=arm64-v8a
+        run: ./gradlew assembleDebug --build-cache -PreactNativeArchitectures=arm64-v8a
