--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "test": "jest"
   },
   "dependencies": {
     "@docusaurus/core": "^2.3.1",
@@ -38,10 +39,16 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
     "@docusaurus/module-type-aliases": "^2.3.1",
     "@tsconfig/docusaurus": "^1.0.6",
+    "@types/jest": "^29.4.0",
+    "babel-jest": "^29.4.3",
     "eslint": "^8.21.0",
     "eslint-plugin-mdx": "^2.0.2",
+    "jest": "^29.4.3",
     "typescript": "^4.7.4"
   }
 }
