--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,4 +1,5 @@
 {
   "name": "ReanimatedPlugin",
-  "devDependencies": {"typescript": "^4.1.3"}
+  "devDependencies": {"typescript": "^4.1.3"},
+  "scripts": {"build": "yarn tsc"}
 }
