--- a/plugin/package.json
+++ b/plugin/package.json
@@ -3,5 +3,5 @@
   "devDependencies": {"typescript": "^4.1.3"},
   "license": "MIT",
   "readmeFilename": "README.md",
-  "scripts": {"build": "yarn tsc", "clear": "rm -f *.js && rm -f *.js.map && rm -f src/*.js && rm -f src/*js.map && rm -rf dec"}
+  "scripts": {"build": "yarn tsc", "clear": "rm -f *.js && rm -f *.js.map && rm -rf dec"}
 }
