--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -4,7 +4,8 @@
     "removeComments": true,
     "module": "commonjs",
     "skipLibCheck": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "strict": true
   },
   "files": ["index.ts"]
 }
