ES6 in tsconfig and removed unnecessary interface

--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES6",
     "removeComments": true,
     "module": "commonjs",
     "skipLibCheck": true,
