--- a/plugin/package.json
+++ b/plugin/package.json
@@ -4,7 +4,9 @@
     "convert-source-map": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "prettier": "^2.5.1",
+    "@types/convert-source-map": "^2.0.0"
   },
   "license": "MIT",
   "readmeFilename": "README.md",
