--- a/plugin/package.json
+++ b/plugin/package.json
@@ -11,8 +11,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "scripts": {
-    "postinstall": "yarn tsc && yarn format",
-    "format": "prettier --write --list-different *.js",
-    "clear": "rm -f *.js && rm -f *.js.map && rm -rf dec"
+    "postinstall": "yarn format && yarn tsc",
+    "format": "prettier --write --list-different **/*.ts"
   }
 }
