--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "ReanimatedPlugin",
   "dependencies": {
     "convert-source-map": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.1.3",
+    "@types/convert-source-map": "^2.0.0",
+    "eslint": "^8.35.0",
     "prettier": "^2.5.1",
-    "@types/convert-source-map": "^2.0.0"
+    "typescript": "^4.1.3"
   },
   "license": "MIT",
   "readmeFilename": "README.md",
   "scripts": {
     "postinstall": "yarn format && yarn tsc",
-    "format": "prettier --write --list-different **/*.ts"
+    "format": "yarn prettier --write --list-different **/*.ts",
+    "lint": "yarn eslint --max-warnings=0 --ext .ts . && yarn prettier --check **/*.ts",
+    "type:check": "yarn tsc --no-emit"
   }
 }
