--- a/plugin/package.json
+++ b/plugin/package.json
@@ -14,6 +14,6 @@
     "postinstall": "yarn format && yarn tsc",
     "format": "yarn prettier --write --list-different **/*.ts",
     "lint": "yarn eslint --max-warnings=0 --ext .ts . && yarn prettier --check **/*.ts",
-    "type:check": "yarn tsc --no-emit"
+    "type:check": "yarn tsc --noEmit"
   }
 }
