--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format:android": "find android/src/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "format:common": "find Common/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "release": "npm login && release-it",
-    "type:check": "yarn tsc --noEmit",
+    "type:check": "yarn tsc --noEmit && cd plugin && yarn type:check && cd ..",
     "prepare": "bob build && husky install",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
