--- a/plugin/package.json
+++ b/plugin/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "scripts": {
-    "postinstall": "yarn format && yarn tsc",
+    "prepare": "yarn generate",
+    "generate": "yarn tsc",
     "format": "yarn prettier --write --list-different **/*.ts",
     "lint": "yarn eslint --max-warnings=0 --ext .ts . && yarn prettier --check **/*.ts",
     "type:check": "yarn tsc --noEmit"
