added yarn in root for CI

--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: 16
           cache: 'yarn'
       - name: Install node dependencies
+        run: yarn
+      - name: Install plugin dependencies
         working-directory: plugin
         run: yarn
       - name: Check types
