--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,9 +1,7 @@
 {
-  "dependencies": {
-    "convert-source-map": "^2.0.0"
-  },
   "devDependencies": {
     "@types/convert-source-map": "^2.0.0",
+    "convert-source-map": "^2.0.0",
     "eslint": "^8.35.0",
     "prettier": "^2.5.1",
     "typescript": "^4.1.3"
