--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
   "lint-staged": {
     "*.(js|ts|tsx)": [
       "eslint --ext '.js,.ts,.tsx' src/ --ignore-pattern src/reanimated1 --ignore-pattern react-native-reanimated.d.ts --ignore-pattern docs --ignore-pattern plugin",
-      "prettier --write '!plugin/**/*.js'"
+      "prettier --write"
     ],
     "plugin/**/*.ts": "yarn lint:plugin",
     "**/*.{h,cpp}": "yarn lint:cpp",
