--- a/.github/workflows/build-monorepo.yml
+++ b/.github/workflows/build-monorepo.yml
@@ -12,36 +12,38 @@ on:
       - main
 
 jobs:
-    build_android_reanimated_non_hoisted:
-      name: Android (non-hoisted Reanimated)
-      uses: ./.github/workflows/build-monorepo-action.yml
-      with:
-        platform: Android
-        concurrency_group: build_monorepo_android_in_app_reanimated-${{ github.ref }}
-        is_hoisted: false
+  build_android_reanimated_non_hoisted:
+    name: Android (non-hoisted Reanimated)
+    uses: ./.github/workflows/build-monorepo-action.yml
+    with:
+      platform: Android
+      concurrency_group: build_monorepo_android_in_app_reanimated-${{ github.ref }}
+      is_hoisted: false
 
-    build_ios_reanimated_non_hoisted:
-      uses: actions/checkout@v2
+  build_ios_reanimated_non_hoisted:
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup upterm session
       uses: lhotari/action-upterm@v1
-      name: iOS (non-hoisted Reanimated)
-        uses: ./.github/workflows/build-monorepo-action.yml
-        with:
-          platform: iOS
-          concurrency_group: build_monorepo_ios_in_app_reanimated-${{ github.ref }}
-          is_hoisted: false
-
-    build_android_reanimated_hoisted:
-      name: Android (hoisted Reanimated)
-      uses: ./.github/workflows/build-monorepo-action.yml
-      with:
-        platform: Android
-        concurrency_group: build_monorepo_android_reanimated_hoisted-${{ github.ref }}
-        is_hoisted: true
-
-    build_ios_reanimated_hoisted:
-      name: iOS (hoisted Reanimated)
+    - name: iOS (non-hoisted Reanimated)
       uses: ./.github/workflows/build-monorepo-action.yml
       with:
         platform: iOS
-        concurrency_group: build_monorepo_ios_reanimated_hoisted-${{ github.ref }}
-        is_hoisted: true
+        concurrency_group: build_monorepo_ios_in_app_reanimated-${{ github.ref }}
+        is_hoisted: false
+
+  build_android_reanimated_hoisted:
+    name: Android (hoisted Reanimated)
+    uses: ./.github/workflows/build-monorepo-action.yml
+    with:
+      platform: Android
+      concurrency_group: build_monorepo_android_reanimated_hoisted-${{ github.ref }}
+      is_hoisted: true
+
+  build_ios_reanimated_hoisted:
+    name: iOS (hoisted Reanimated)
+    uses: ./.github/workflows/build-monorepo-action.yml
+    with:
+      platform: iOS
+      concurrency_group: build_monorepo_ios_reanimated_hoisted-${{ github.ref }}
+      is_hoisted: true
