--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format:common": "find Common/ -iname *.h -o -iname *.cpp | xargs clang-format -i",
     "release": "npm login && release-it",
     "type:check": "yarn tsc --noEmit && cd plugin && yarn type:check && cd ..",
-    "prepare": "bob build && husky install",
+    "prepare": "bob build && husky install && yarn plugin",
     "circular_dependency_check": "yarn madge --extensions js,ts,tsx --circular src lib",
     "setup": "yarn && cd Example && yarn && cd ios && pod install --verbose && cd ../..",
     "clean": "rm -rf node_modules && cd Example && rm -rf node_modules && cd ios && pod deintegrate && cd ../..",
@@ -91,6 +91,7 @@
     "react-native": "*"
   },
   "devDependencies": {
+    "@types/node": "12.7.12",
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
