--- a/Example/package.json
+++ b/Example/package.json
@@ -24,9 +24,9 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-native-fontawesome": "^0.2.3",
+    "@fortawesome/fontawesome-svg-core": "6.3.0",
+    "@fortawesome/free-solid-svg-icons": "6.3.0",
+    "@fortawesome/react-native-fontawesome": "0.3.0",
     "@react-native-community/picker": "^1.8.1",
     "@react-native-community/slider": "^4.4.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
