--- a/Example/.gitignore
+++ b/Example/.gitignore
@@ -62,6 +62,9 @@ yarn-error.log
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
+# testing
+/coverage
+
 # Expo
 /.expo
 /web-build
