--- a/Example/android/settings.gradle
+++ b/Example/android/settings.gradle
@@ -5,4 +5,4 @@ include ':react-native-reanimated'
 project(':react-native-reanimated').projectDir = new File(rootProject.projectDir, '../../android')
 
 include ':app'
-includeBuild('../node_modules/react-native-gradle-plugin')
+includeBuild('../node_modules/@react-native/gradle-plugin')
