--- a/Example/package.json
+++ b/Example/package.json
@@ -40,7 +40,7 @@
     "expo-asset": "^8.2.0",
     "react": "18.2.0",
     "react-dom": "^16.13.1",
-    "react-native": "0.71.3",
+    "react-native": "0.72.0-rc.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-pager-view": "^5.4.1",
     "react-native-safe-area-context": "^4.5.0",
@@ -53,8 +53,8 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-optional-chaining": "^7.12.13",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@babel/runtime": "^7.12.5",
+    "@react-native/eslint-config": "^0.72.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/d3-shape": "^2.0.0",
     "@types/jest": "^29.2.1",
@@ -71,15 +71,15 @@
     "jasmine-core": "^3.5.0",
     "jest": "^29.2.1",
     "jest-circus": "^27.1.0",
-    "metro-react-native-babel-preset": "0.73.7",
+    "metro-react-native-babel-preset": "0.75.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.1",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.9.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
   },
   "resolutions": {
     "@babel/runtime": "7.12.13"
