--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/preset-env": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.1",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/react-native": "^7.1.0",
@@ -130,7 +130,7 @@
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-native": "0.71.3",
+    "react-native": "0.72.0-rc.0",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.4.2",
     "react-test-renderer": "17.0.2",
