--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.72.0-rc.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
@@ -27,8 +27,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
+    "@babel/runtime": "^7.12.5",
+    "@react-native/eslint-config": "^0.72.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
@@ -36,13 +36,13 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
+    "metro-react-native-babel-preset": "0.75.1",
     "patch-package": "^6.4.7",
     "prettier": "^2.6.1",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.8.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
   }
 }
