Setup ESLint in Example app

--- a/Example/package.json
+++ b/Example/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/d3-shape": "^2.0.0",
     "@types/jest": "^29.2.1",
