clear .npmignore and reorder package.json with node_modules exclusion

--- a/package.json
+++ b/package.json
@@ -39,28 +39,29 @@
     "Common/",
     "src/",
     "lib/",
-    "!**/__tests__",
-    "!**/__fixtures__",
-    "!**/__mocks__",
-    "!lib/typescript",
     "react-native-reanimated.d.ts",
     "android/src/main/AndroidManifest.xml",
     "android/src/main/java/",
     "android/build.gradle",
     "android/",
     "ios/",
-    "!ios/build/",
-    "!android/build/",
-    "!android/.cxx/",
-    "!android/.gradle/",
     "RNReanimated.podspec",
     "scripts/reanimated_utils.rb",
     "README.md",
     "mock.js",
     "plugin/",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__",
+    "!lib/typescript",
+    "!ios/build/",
+    "!android/build/",
+    "!android/.cxx/",
+    "!android/.gradle/",
     "!__snapshots__",
     "!*.test.js",
-    "!*.test.js.map"
+    "!*.test.js.map",
+    "!**/node_modules"
   ],
   "repository": {
     "type": "git",
