improve test logic

--- a/.github/workflows/push-check.yml
+++ b/.github/workflows/push-check.yml
@@ -29,18 +29,23 @@ jobs:
         run: >-
           ./createNPMPackage.sh ${{ inputs.version }} 2> build.log
 
-      - name: Check if node_modules were packed
+      - name: Check if any node_modules were packed
         run: >-
           ! grep --silent node_modules build.log
-
-      - name: Show packed node_modules
-        if: steps.check-if-node_modules-were-packed.outcome != 'success'
-        run: >-
-          ! grep node_modules build.log
 
       - name: Check if size is over 1MB
         run: grep --silent -E "npm notice package size:\s*[0-9]{3}(.[0-9])?\s*kB" build.log
 
-      - name: Show exceeded package size
-        if: steps.check-if-size-is-over-1MB.outcome != 'success'
+      - name: Show build log
+        if: failure()
+        run: >-
+          cat build.log
+
+      - name: Show packed node_modules
+        if: failure()
+        run: >-
+          ! grep node_modules build.log
+
+      - name: Show package size
+        if: failure()
         run: grep -E "npm notice package size:\s*[0-9]{3}(.[0-9])?\s*kB" build.log
