force error on CI

--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "!android/.gradle/",
     "!__snapshots__",
     "!*.test.js",
-    "!*.test.js.map",
-    "!**/node_modules"
+    "!*.test.js.map"
   ],
   "repository": {
     "type": "git",
