--- a/.github/workflows/push-check.yml
+++ b/.github/workflows/push-check.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Check if size is over 1MB
         id: size
-        run: grep --silent -E "npm notice package size:\s*[0-9]{3}(.[0-9])?\s*kB" build.log
+        run: grep --silent -E "npm notice package size:\s*[0-9]{3}(\.[0-9]*)?\s*kB" build.log
 
       - name: Show build log
         if: steps.build.outcome != 'success'
@@ -49,6 +49,6 @@ jobs:
         run: >-
           ! grep node_modules build.log
 
-      - name: Show package size
+      - name: Show exceeded package size
         if: steps.size.outcome != 'success'
         run: grep -E "npm notice package size:\s*[0-9]{3}(.[0-9])?\s*kB" build.log
