--- a/.github/workflows/push-check.yml
+++ b/.github/workflows/push-check.yml
@@ -51,4 +51,4 @@ jobs:
 
       - name: Show exceeded package size
         if: steps.size.outcome != 'success'
-        run: grep -E "npm notice package size:\s*[0-9]{3}(.[0-9])?\s*kB" build.log
+        run: grep -E "npm notice package size:\s*[0-9]{3}(\.[0-9]*)?\s*kB" build.log
