--- a/.github/workflows/push-check.yml
+++ b/.github/workflows/push-check.yml
@@ -40,15 +40,15 @@ jobs:
         run: grep --silent -E "npm notice package size:\s*[0-9]{3}(\.[0-9]*)?\s*kB" build.log
 
       - name: Show build log
-        if: always() && steps.build.outcome != 'success'
+        if: always() && steps.build.outcome == 'failure'
         run: >-
           cat build.log
 
       - name: Show packed node_modules
-        if: always() && steps.node_modules.outcome != 'success'
+        if: always() && steps.node_modules.outcome == 'failure'
         run: >-
           ! grep node_modules build.log
 
       - name: Show exceeded package size
-        if: always() && steps.size.outcome != 'success'
+        if: always() && steps.size.outcome == 'failure'
         run: grep -E "npm notice package size:\s*[0-9]{3}(\.[0-9]*)?\s*kB" build.log
