--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -38,10 +38,33 @@ jobs:
         env:
           ANDROID_NDK: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: >-
-          ./createNPMPackage.sh ${{ inputs.version }}
+          ./createNPMPackage.sh ${{ inputs.version }} 2> build.log
+
+      - name: Check if any node_modules were packed
+        id: node_modules
+        run: >-
+          ! grep --silent node_modules build.log
+
+      - name: Check if size is over 1MB
+        id: size
+        run: grep --silent -E "npm notice package size:\s*[0-9][0-9]?[0-9]?(\.[0-9]*)?\s*kB" build.log
+
+      - name: Show build log
+        if: always() && steps.build.outcome == 'failure'
+        run: >-
+          cat build.log
+
+      - name: Show packed node_modules
+        if: always() && steps.node_modules.outcome == 'failure'
+        run: >-
+          ! grep node_modules build.log
+
+      - name: Show exceeded package size
+        if: always() && steps.size.outcome == 'failure'
+        run: grep -E "npm notice package size:" build.log
 
       - run: echo "PACKAGE_NAME=$(ls -l | egrep -o "react-native-reanimated-(.*)(=?\.tgz)")" >> $GITHUB_ENV
-      
+
       - name: Upload npm package
         uses: actions/upload-artifact@v3
         with:
