--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-box2d": "^0.2.5",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
