--- a/.github/workflows/build-monorepo-action.yml
+++ b/.github/workflows/build-monorepo-action.yml
@@ -32,6 +32,8 @@ jobs:
           echo '{"name":"rnos-monorepo-tester","version":"1.0.0","license":"MIT","private":true,"workspaces":{"packages":["RootApp","packages/PackageApp", "AppA", "AppB"],"nohoist":["**/react","**/react-dom","**/react-native","**/react-native/**","**/react-native-codegen","**/react-native-dev-menu"]}}' > package.json
           yarn
           mkdir packages
+      - name: Uninstall react-native
+        run: npm uninstall -g react-native
       - name: Create RootApp
         working-directory: monorepo
         run: npx react-native@next init RootApp --skip-install ${{ env.REACT_NATIVE_TEMPLATE }} --verbose
