--- a/.github/workflows/static-example-apps-checks.yml
+++ b/.github/workflows/static-example-apps-checks.yml
@@ -2,6 +2,7 @@ name: Test TypeScript and Lint
 on:
   pull_request:
     paths:
+      - '.github/workflows/static-example-apps-checks.yml'
       - 'Example/**'
       - 'FabricExample/**'
       - '*'
