--- a/.github/workflows/static-root-checks.yml
+++ b/.github/workflows/static-root-checks.yml
@@ -2,6 +2,7 @@ name: Test TypeScript and Lint
 on:
   pull_request:
     paths:
+      - '.github/workflows/static-root-checks.yml'
       - 'src/**'
       - '*'
   push:
